# poke_ball_calculator

./: LICENSE  Makefile  README.md  app.py  image_test.py  main.py  pokemon_list.sav  pyproject.toml  requirements-dev.txt  requirements-streamlit.txt  requirements.txt  settings.py
.streamlit/: config.toml
app/: config.py  dataframe.py  sidebar.py
css/: styles.css
models/: catch_scenario.py  exceptions.py  poke_ball.py  pokemon.py
scraper/: __init__.py  exceptions.py  main.py  pokemon.py  scraper.py
src/: api.py  calc.py  misc.py  modifiers.py  scenarios.py
