[project]
name = "pokeball-calculator"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ "name" = "GuilhermeCAz" }, { "name" = "marcelogcardozo" }]
dependencies = ["streamlit"]

[project.optional-dependencies]
dev = ["mypy", "pandas-stubs", "pip-tools", "ruff", "types-requests"]

[tool.pip-tools]
strip-extras = true

[tool.mypy]
strict = true

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]

extend-ignore = [
    "ANN101", # missing-type-self: deprecated
    "D203",   # one-blank-line-before-class: clashes with D211
    "D212",   # multi-line-summary-first-line: clashes with D213
    "Q000",   # quotes: single quotes are preferred
    "ARG",    # flake8-unused-arguments
    "D",      # pydocstyle: removed during early development
    "PIE796", # non-unique-enums
]

[tool.ruff.lint.per-file-ignores]
"tests.py" = ["S101"]
